댓글 실제 구현중

--- a/src/main/resources/templates/articles/view.mustache
+++ b/src/main/resources/templates/articles/view.mustache
@@ -22,10 +22,12 @@
   </tbody>
 </table>
 
-<a href="/articles/List"            class="btn btn-primary">목록</a>   
-<a href="/articles/WriteForm"       class="btn btn-secondary">새 글쓰기</a>   
-<a href="/articles/{{id}}/EditForm" class="btn btn-warning">수정</a>   
-<a href="/articles/{{id}}/Delete"   class="btn btn-danger">삭제</a>   
+<a href="/articles/List"            class="btn btn-sm btn-primary"   style="width:100px">목록</a>   
+<a href="/articles/WriteForm"       class="btn btn-sm btn-secondary" style="width:100px">새 글쓰기</a>   
+<a href="/articles/{{article.id}}/EditForm" class="btn btn-sm btn-warning"   style="width:100px">수정</a>   
+<a href="/articles/{{id}}/Delete"   class="btn btn-sm btn-danger"    style="width:100px">삭제</a>  
+<!-- 댓글 뷰 화면 추가 -->
+ {{>comments/_comments}} 
       
 {{>layouts/footer}}
 
